# OptiXTest

./: AABB.h  Binding.h  CMakeLists.txt  CU.cc  CU.h  CUTest.cc  CUTest.sh  Ctx.cc  Ctx.h  Foundry.cc  Foundry.h  FoundryTest.cc  FoundryTest.sh  Frame.cc  Frame.h  GAS.h  GAS_Builder.cc  GAS_Builder.h  Geo.cc  Geo.h  GeoTest.sh  Grid.cc  Grid.h  IAS_Builder.cc  Identity.cc  Identity.h  IdentityTest.cc  InstanceIdTest.cc  NP.hh  Node.cc  Node.h  NodeTest.cc  NodeTest.sh  OptiX6Test.cu  OptiX7Test.cu  OptiXTest.cc  OpticksCSG.h  PIP.cc  Params.cc  Params.h  (+62 more)
notes/: only_one_of_27_prim_are_visible_with_clustered_sphere_geometry_one_gas_one_bi_27_aabb.rst
tests/: AABBTest.cc  AABBTest.sh  CUTest.sh  FoundryTest.cc  FoundryTest.sh  GeoTest.cc  GeoTest.sh  GridTest.cc  GridTest.sh  IdentityTest.cc  IdentityTest.sh  InstanceIdTest.cc  InstanceIdTest.sh  NodeTest.sh  PrimTest.cc  PrimTest.sh  ScanTest.cc  ScanTest.py  ScanTest.sh  ShapeTest.cc  ShapeTest.py  ShapeTest.sh  SolidTest.cc  SolidTest.py  SolidTest.sh  TranTest.sh  UtilTest.cc  UtilTest.sh  csg.cc  csg.sh  csg_classify.cc  csg_classify.cu  intersect_tree.cc  intersect_tree.sh  posi.py  posi.sh  qat4.cc  qat4.cu  sizeof.sh
